[package]
name = "mediabox"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "mediabox"

[features]
default = ["rtmp", "fs"]
rtmp = ["dep:rml_rtmp", "tokio/net"]
fs = ["tokio/fs"]
wasm = ["dep:wasm-streams", "dep:web-sys", "dep:wasm-bindgen"]

[dependencies]
anyhow = "1.0.57"
bytes = "1.1.0"
flvparse = "0.1.0"
futures = "0.3.21"
nom = "7.1.1"
gcd = "2.1.0"
h264-reader = "0.6.0"
log = "0.4.17"
rml_rtmp = { version = "0.6.1", optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "io-util"] }
async-trait = "0.1.56"
thiserror = "1.0.31"
downcast = "0.11.0"
logos = "0.12.1"
aho-corasick = "0.7.18"
lexopt = "0.2.1"
fluent-uri = "0.1.3"
wasm-streams = { version = "0.3.0", optional = true }
web-sys = { version = "0.3.60", features = ["File", "Blob", "ReadableStream"], optional = true }
pin-project = "1.0.12"
wasm-bindgen = { version = "0.2.83", optional = true }
urlencoding = "2.1.2"

[dev-dependencies]
env_logger = "0.9.0"
console-subscriber = "0.1.6"
test-case = "2.2.2"
assert_matches = "1.5.0"
tokio = { version = "1", features = ["full"] }
