[package]
name = "mediabox"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "mediabox"

[features]
default = ["rtmp", "fs"]
rtmp = ["dep:rml_rtmp", "tokio/net"]
fs = ["tokio/fs"]
wasm = ["dep:wasm-streams", "dep:web-sys", "dep:wasm-bindgen"]

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
flvparse = "0.1.0"
futures = "0.3.28"
nom = "7.1.3"
gcd = "2.3.0"
h264-reader = "0.6.0"
log = "0.4.17"
rml_rtmp = { version = "0.8.0", optional = true }
tokio = { version = "1.28.1", default-features = false, features = ["rt", "sync", "io-util"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
downcast = "0.11.0"
logos = "0.13.0"
aho-corasick = "1.0.1"
lexopt = "0.3.0"
fluent-uri = "0.1.4"
wasm-streams = { version = "0.3.0", optional = true }
web-sys = { version = "0.3.63", features = ["File", "Blob", "ReadableStream"], optional = true }
pin-project = "1.1.0"
wasm-bindgen = { version = "0.2.86", optional = true }
urlencoding = "2.1.2"
tracing = "0.1.37"
pretty_assertions = "1.3.0"

[dev-dependencies]
env_logger = "0.10.0"
console-subscriber = "0.1.9"
test-case = "3.1.0"
assert_matches = "1.5.0"
tokio = { version = "1.28.1", features = ["full"] }
dhat = "0.3.2"
